# complex-system-simulation

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements.txt.txt
Code/: ProjectNotebook.ipynb  ProjectNotebook_rerun_tests.ipynb  cs_measures.py  dla_model.py  dla_simulation.py  vis_tools.py
Code/results/: sim_results_2D_moore.json  sim_results_2D_von_neumann.json  sim_results_3D_moore.json  sim_results_3D_von_neumann.json
Code/results_boyan/: sim_results_3Da.json
Documentation/: dlacorals.cs_measures.html  dlacorals.dla_model.html  dlacorals.dla_simulation.html  dlacorals.html  dlacorals.vis_tools.html
Exercises - CA/: custom_ca.py
Exercises - Chaos/: bakers_map.py
Exercises/Exercises - Chaos/: tent_map.py
Project/Code/: EnvPlots.ipynb  ProjectNotebook.ipynb  ProjectNotebook_envsim_backup.ipynb  ProjectNotebook_final.ipynb  ProjectNotebook_fract_dim.ipynb  ProjectNotebook_multi_seed.ipynb  cs_measures.py  dla_model.py  dla_simulation.py  flowbook.ipynb  vis_tools.py
Project/Code/.ipynb_checkpoints/: ProjectNotebook-checkpoint.ipynb
Project/Code/Results/: sim_results_drift_vector_angle.json
Project/Code/Results/results_boyan/: sim_results_2D_moore.json  (+1 more)
Project/Code/results_boyan/: sim_results_2D_von_neumann.json  sim_results_3D_moore.json
Project/Inspiration/: README.md
src/: cs_measures.py  dla_model.py  vis_tools.py
src/DLA_corals.egg-info/: PKG-INFO  SOURCES.txt
src/dlacorals/: dla_simulation.py  vis_tools.py
src/dlacorals.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/slarocald.egg-info/: PKG-INFO  SOURCES.txt
