[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DLA_corals"
version = "0.0.1"
authors = [
  { name="Boyan Mihaylov", email="mboyo@duck.com" },
  { name="Loes Bijman", email="loesbijman@gmail.com" },
  { name="Esther Bakels", email="esther.bakels@gmail.com" },
  { name="Aleksandar Jacimovic", email="a.s.jacimovic@gmail.com" },
]
description = "DLA for coral growth modelling"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["DLA", "Diffusion Limited Aggregation", "coral", "fractal", "complex system"]

[project.urls]
Homepage = "https://github.com/mboyan/complex-system-simulation"
Issues = "https://github.com/mboyan/complex-system-simulation/issues"